<resources>
    <string name="app_name">iQueue</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="edit_profile">Update Profile</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="set_location">Set Location</string>
    <string name="logout">Log out</string>
    <string name="about_us">AboutUs/License</string>


    <string name="add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="product_hint">Enter Products for the Store</string>
    <string name="department_store">My Department Store &#8230;</string>

    <string-array name="dept_array">
        <item>Apparel</item>
        <item>Beauty</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Home Improvement</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>

    <color name="snow">#eee9e9</color>


    <string name="spinner_title">SpinnerTitle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="firstPara">An App To Deposit, Withdraw ,Exchange Rupee Offline.\n \n Just fill in slips (eDeposit,eWithdrawal)
    and get eToken to know your Status.\n \n NO NEED TO STAND IN QUEUES \n NO NEED OF PAPER SLIPS \n KNOW ATMS WITH CASH AROUND YOU</string>

    <string name="SecondPara">NOTIFICATIONS Update: 20/11/2016 \n Deposit: \t limit Rs.2500 applicable 20/11/2016 12:00AM \nCircular Link:http:gov.com \n
    \n Withdraw: \t limit Rs.2000 applicable 20/11/2016 12:00AM \nCircular Link:http:gov.com \n \n
        EXchange: \t Only at RBI limit Rs.2000 applicable 20/11/2016 12:00AM \nCircular Link:http:gov.com</string>

    <string name="textActLogInstruction">Note: PAN or Aadhaar Card Number Is Your ID As Entered During Registration</string>
    <string name="textActRegInstruction">Enter Your Card Details By Selecting Your PAN Card or Aadhaar Card Or Both. And Take Photograph Of It.</string>

    <string name="textFragOneDone">Step 0: \n\n Add Your  \n Bank Accounts </string>
    <string name="textFragOneDoneSaved">Account Added</string>

    <string name="textFragTwoDone">Step 1: \n\n Fill Slips \n ( Deposit or Withdrawal or DD) </string>
    <string name="textFragTwoDoneSaved">Slip Saved</string>

    <string name="textFragThreeDone">Step 2: \n\n Select Slips And Banks \n To Get Token </string>
    <string name="textFragThreeDoneSaved">Applied To Token</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment3">Hello blank fragment 3</string>
    <string name="hello_blank_fragment4">Hello blank fragment 4</string>
    <string name="hello_blank_fragment5">Hello blank fragment 5</string>

    <!-- Remove if you want , drawer not created , so useless for now-->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <!-- navigation drawer item labels -->
    <!-- drawer not created , so useless for now-->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>